# ProjectsAndWork

Calculator/: CMakeLists.txt
Calculator/include/: Component_Node.h  Composite_Add_Node.h  Composite_Binary_Node.h  Composite_Divide_Node.h  Composite_Factorial_Node.h  Composite_Left_Node.h  Composite_Modulus_Node.h  Composite_Multiply_Node.h  Composite_Negate_Node.h  Composite_Power_Node.h  Composite_Subtract_Node.h  Composite_Unary_Node.h  Count_Visitor.h  Evaluation_Visitor.h  Expression_Tree.h  Expression_Tree_Command.h  Expression_Tree_Command_Factory.h  Expression_Tree_Command_Factory_Impl.h  Expression_Tree_Command_Impl.h  Expression_Tree_Context.h  Expression_Tree_Event_Handler.h  Expression_Tree_Iterator.h  Expression_Tree_Iterator_Impl.h  Expression_Tree_State.h  Interpreter.h  LQueue.h  LStack.h  Leaf_Node.h  Options.h  Print_Visitor.h  Refcounter.h  Typedefs.h  Visitor.h  getopt.h
Calculator/src/: Component_Node.cpp  Composite_Add_Node.cpp  Composite_Binary_Node.cpp  Composite_Divide_Node.cpp  Composite_Factorial_Node.cpp  Composite_Left_Node.cpp  Composite_Modulus_Node.cpp  Composite_Multiply_Node.cpp  Composite_Negate_Node.cpp  Composite_Power_Node.cpp  Composite_Subtract_Node.cpp  Composite_Unary_Node.cpp  Count_Visitor.cpp  Evaluation_Visitor.cpp  Expression_Tree.cpp  Expression_Tree_Command.cpp  Expression_Tree_Command_Factory.cpp  Expression_Tree_Command_Factory_Impl.cpp  Expression_Tree_Command_Impl.cpp  Expression_Tree_Context.cpp  Expression_Tree_Event_Handler.cpp  Expression_Tree_Iterator.cpp  Expression_Tree_Iterator_Impl.cpp  Expression_Tree_State.cpp  main.cpp  (+9 more)
(+5 files in other folders)
